# moglix_assessment

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: solution.hpp
src/: main.cpp
tests/: test_solution.cpp
